# custom_conf

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg
custom_conf/: config.py  errors.py  reader.py
custom_conf/properties/: bounded_property.py  nested_property.py  property.py
src/: reader.py
src/custom_conf/: config.py  errors.py  reader.py
src/custom_conf/properties/: bounded_property.py  choices_property.py  coercible_property.py  nested_property.py  property.py
src/properties/: bounded_property.py
test/: __init__.py  test_config.py  utils.py
test/test_properties/: test_bounded_property.py  test_coercible_property.py  test_nested_property.py  test_property.py
