[tool.poetry]
name = "custom_conf"
version = "0.2.0a1"
description = "A Python library for managing configuration files with type validation and range checks."
readme = "README.md"
license = "Apache-2.0"
authors = ["Julius Heinzinger <julius.heinzinger@gmail.com>"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Libraries",
]
repository = "https://github.com/heijul/custom_conf"
keywords = ["config", "configuration", "instance descriptors"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
typeguard = "^4.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
