[metadata]
name = custom_conf
version = 0.1
author = Julius Heinzinger
url = https://github.com/heijul/custom_conf
license = Apache 2.0
description = Customizable configuration tool for other projects
long_description = file: README.md

[options]
packages = find:
package_dir = =src
python_requires = >=3.10
install_requires =
    PyYAML >= 6.0
    setuptools-git

[options.packages.find]
where = src
